<resources>
    <string name="app_name">YunYou</string>
    <string name="login">登录</string>
    <string name="user_phone">请输入手机号码</string>
    <string name="password">请输入登录密码</string>
    <string name="register">快速注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="phone">手机号</string>
    <string name="verification">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="confirmcode">确认密码</string>
    <string name="inviter">（邀请人）ID：</string>
    <string name="agreeterms">注册即表示您同意我们的“条款和隐私政策”</string>
    <string name="code_cannot_be_empty">验证码不能为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
