<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7" >

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/em_welcom_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_weight="1" >

       <LinearLayout
           android:orientation="vertical"
           android:id="@+id/inmsg"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/mobile"
               android:layout_width="match_parent"
               android:layout_height="54dp"
               android:layout_centerVertical="true"
               android:background="@null"
               android:hint="@string/user_phone"
               android:paddingLeft="10dip"
               android:singleLine="true"
               android:textColor="#000"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/zone"
               android:layout_width="match_parent"
               android:layout_height="54dp"
               android:layout_centerVertical="true"
               android:background="@null"
               android:hint="区号86"
               android:paddingLeft="10dip"
               android:singleLine="true"
               android:textColor="#000"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/pass_word"
               android:layout_width="match_parent"
               android:layout_height="54dp"
               android:layout_centerVertical="true"
               android:background="@null"
               android:hint="@string/password"
               android:paddingLeft="10dip"
               android:singleLine="true"
               android:textColor="#000"
               android:textSize="18sp" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="56dp"
               android:layout_marginLeft="10dip"
               android:layout_marginRight="10dip"
               android:background="@color/colorAccent"
               android:gravity="center"
               android:id="@+id/login"
               android:paddingBottom="7dp"
               android:paddingTop="7dp"
               android:text="@string/login"
               android:textColor="@android:color/black"
               android:textSize="18sp" />
       </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inmsg"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword"
            android:id="@+id/textView"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/textView2"
            android:clickable="true"
            android:onClick="reg"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/colorAccent"
    android:id="@+id/login_tv_result"/>
    </RelativeLayout>
</LinearLayout>