<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5" >

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerInParent="true"
            android:src="@drawable/em_welcom_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:hint="手机号"/>
        </RelativeLayout>
        <TextView
            android:layout_below="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/colorAccent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/code"
                android:hint="短信验证码"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:text="@string/getcode"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView
            android:layout_below="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/colorAccent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass_word"
                android:hint="密码"/>
        </RelativeLayout>
        <TextView
            android:layout_below="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/colorAccent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:id="@+id/confirmcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_confirm"
                android:background="@null"
                android:hint="@string/confirmcode"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seq"
            android:hint="校验码"/>
        <TextView
            android:layout_below="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/colorAccent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_inviter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beinvited_uid"
                android:hint="邀请人ID"/>
        </RelativeLayout>
        <TextView
            android:layout_below="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textview"
            android:background="@color/text_yellow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:onClick="register"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:id="@+id/reg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_centerVertical="true"/> 

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/terms"
                android:layout_centerVertical="true"
                android:text="@string/agreeterms"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>